--- a/css/bonus.css
+++ b/css/bonus.css
@@ -26,23 +26,23 @@
   background-size: 65%;
 }
 .card--3 .card__img, .card--3 .card__img--hover {
-  background-image: url('/img/logo-Farm.png');
+  background-image: url('img/logo-Farm.png');
   background-size: 65%;
 }
 .card--4 .card__img, .card--4 .card__img--hover {
-  background-image: url('/img/logo-efun.png');
+  background-image: url('img/logo-efun.png');
   background-size: 65%;
 }
 .card--6 .card__img, .card--6 .card__img--hover {
-  background-image: url('/img/logo-excise.png');
+  background-image: url('img/logo-excise.png');
   background-size: 65%;
 }
 .card--7 .card__img, .card--7 .card__img--hover {
-  background-image: url('/img/logo-ha.png');
+  background-image: url('img/logo-ha.png');
   background-size: 45%;
 }
 .card--8 .card__img, .card--8 .card__img--hover {
-  background-image: url('/img/logo-local.png');
+  background-image: url('img/logo-local.png');
   background-size: 65%;
 }
 .card_link{
