--- a/css/custom_paper.css
+++ b/css/custom_paper.css
@@ -4,7 +4,7 @@
   }
   
   .jumbotron {
-    background: url(img/交易.jpg) no-repeat bottom center;
+    background: url(交易.jpg) no-repeat bottom center;
     background-size: cover;
     margin-top: 60px;
     height: 300px;
