--- a/css/bonus.css
+++ b/css/bonus.css
@@ -18,7 +18,7 @@
   font-weight: bold;
 }
 .card--1 .card__img, .card--1 .card__img--hover {
-    background-image: url('logo-travel.png') no-repeat;
+    background-image: url('logo-travel.png');
     background-size: 65%;
 }
 .card--2 .card__img, .card--2 .card__img--hover {
