--- a/css/bonus.css
+++ b/css/bonus.css
@@ -21,6 +21,10 @@
     background-image: url('logo-travel.png');
     background-size: 65%;
 }
+.card--1 .card__img, .card--1 .card__img--hover {
+    background-image: url('logo-travel.png');
+    background-size: 65%;
+}
 .card--2 .card__img, .card--2 .card__img--hover {
   background-image: url('logo-i.png');
   background-size: 65%;
